bat.bool1.sleepin.SleepIn.scala.error
Erreur de compilation :
SleepIn:3: error: not found: value ||
  if (weekday==false) || (vacation==true) {
                      ^